--- a/css/structure.css
+++ b/css/structure.css
@@ -8,8 +8,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
     height: auto;
+    margin-bottom: 10px;
 }
 
 .logo {
@@ -48,11 +48,15 @@
 
 .main-text {
     margin: 5px;
+    width: 75%;
+    height: auto;
 }
 
 .aside {
     margin: 5px;
     margin-left: 0px;
+    width: 25%;
+    height: auto;
 }
 
 .footer-container {
