--- a/css/structure.css
+++ b/css/structure.css
@@ -24,8 +24,8 @@
 }
 
 .logo-icon {
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 6.25rem;
+    max-height: 6.25rem;
     width: auto;
     height: auto;
 }
@@ -45,11 +45,24 @@
 }
 
 .link-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     margin-right: 1%;
     line-height: 400%;
     height: auto;
     width: 25%;
     text-align: center;
+}
+
+.spotify-icon,
+.wikipedia-icon {
+    max-width: 2rem;
+    max-height: 2rem;
+    width: auto;
+    height: auto;
+    margin: 0.5rem;
 }
 
 .geborenam-page {
