--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@
     border-radius: 1rem 0.1rem 1rem 0.1rem;
 }
 
+.spotify-icon,
+.wikipedia-icon {
+    filter: grayscale(100%);
+}
+
 .main-text,
 .aside {
     text-align: justify;
