added animations to header-bar

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
     background-color: rgb(71, 71, 71);
     border: 0.2rem solid grey;
     border-radius: 1rem 0.1rem 1rem 0.1rem;
+    overflow: hidden;
 }
 
 .spotify-icon,
