--- a/css/structure.css
+++ b/css/structure.css
@@ -19,8 +19,9 @@
     width: 40%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
+    padding-bottom: 1rem;
 }
 
 .logo-icon {
@@ -33,6 +34,7 @@
 .logo-text {
     margin-left: 1%;
     height: auto;
+    width: auto;
 }
 
 .nav-container {
