--- a/css/structure.css
+++ b/css/structure.css
@@ -12,7 +12,7 @@
     flex-direction: row;
     justify-content: space-between;
     height: auto;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 }
 
 .logo {
@@ -71,6 +71,25 @@
     margin-left: 1%;
 }
 
+.introduction-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: auto;
+    margin-bottom: 0.625rem;
+}
+
+.introduction-image {
+    max-height: 22rem;
+    width: auto;
+}
+
+.introduction-text {
+    width: 40%;
+    height: auto;
+    margin-left: 2rem;
+}
+
 .main-container {
     display: flex;
     flex-direction: row;
@@ -80,19 +99,19 @@
 
 .main-text {
     margin: 5px;
-    width: 75%;
+    width: 55%;
     height: auto;
 }
 
 .aside {
     margin: 5px;
     margin-left: 0px;
-    width: 25%;
+    width: 30%;
     height: auto;
 }
 
 .footer-container {
     line-height: 500%;
     height: auto;
-    margin-top: 10px;
+    margin-top: 0.625rem;
 }
