--- a/css/structure.css
+++ b/css/structure.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
     height: auto;
     box-sizing: border-box;
     padding: 1%;
@@ -12,7 +13,7 @@
     flex-direction: row;
     justify-content: space-between;
     height: auto;
-    margin-bottom: 0.625rem;
+    margin-bottom: 1rem;
 }
 
 .logo {
@@ -76,18 +77,21 @@
     flex-direction: row;
     justify-content: center;
     height: auto;
-    margin-bottom: 0.625rem;
+    width: 60%;
+    padding: 2.5rem;
+    margin-bottom: 2rem;
 }
 
 .introduction-image {
-    max-height: 22rem;
+    max-height: 19rem;
     width: auto;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+    float: left;
 }
 
 .introduction-text {
-    width: 40%;
     height: auto;
-    margin-left: 2rem;
 }
 
 .main-container {
@@ -98,14 +102,14 @@
 }
 
 .main-text {
-    margin: 5px;
+    margin: 0.3125rem;
     width: 55%;
     height: auto;
 }
 
 .aside {
-    margin: 5px;
-    margin-left: 0px;
+    margin: 0.3125rem;
+    margin-left: 0;
     width: 30%;
     height: auto;
 }
