--- a/css/structure.css
+++ b/css/structure.css
@@ -115,7 +115,12 @@
 }
 
 .footer-container {
-    line-height: 500%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     height: auto;
+    width: 100%;
+    line-height: 5rem;
+    padding: 1rem;
     margin-top: 0.625rem;
 }
