replaced rgb values with color-vars

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@
 .link-buttons {
     font-weight: bold;
     letter-spacing: 0.2rem;
-    color: rgb(214, 214, 214);
-    background-color: rgb(71, 71, 71);
+    color: --text-color-bright;
+    background-color: --background-color;
     border: 0.2rem solid grey;
     border-radius: 1rem 0.1rem 1rem 0.1rem;
     overflow: hidden;
@@ -25,7 +25,7 @@
 
 .introduction-container {
     background-color: grey;
-    border: 0.2rem solid rgb(71, 71, 71);
+    border: 0.2rem solid var(--bg-color);
     border-radius: 1.2rem 0.3rem 1.2rem 0.3rem;
 }
 
@@ -41,12 +41,12 @@
 }
 
 .footer-container {
-    background-color: rgb(71, 71, 71);
-    color: rgb(214, 214, 214);
+    background-color: var(--bg-color);
+    color: --text-color-bright;
 }
 
 .source-links {
     font-style: italic;
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    color: --footer-text-color;
 }
