--- a/css/colors.css
+++ b/css/colors.css
@@ -1,3 +1,6 @@
 :root {
     --main-bg-color: rgb(184, 184, 184);
+    --bg-color: rgb(71, 71, 71);
+    --text-color-bright: rgb(214, 214, 214);
+    --footer-text-color: rgb(255, 255, 255);
 }
