--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,11 @@
     text-align: justify;
 }
 
+.autogramm-image {
+    border: 0.2rem solid var(--bg-color);
+    border-radius: 1rem 0.1rem 1rem 0.1rem;
+}
+
 .footer-container {
     background-color: var(--bg-color);
     color: --text-color-bright;
