adjusted margin of introduction container

--- a/css/structure.css
+++ b/css/structure.css
@@ -80,7 +80,8 @@
     height: auto;
     width: 60%;
     padding: 2.5rem;
-    margin-bottom: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 7.5rem;
 }
 
 .introduction-image {
