--- a/css/structure.css
+++ b/css/structure.css
@@ -136,6 +136,8 @@
     height: auto;
     padding: 7.5rem;
     line-height: 2rem;
+    margin-top: 3rem;
+    margin-bottom: 6rem;
 }
 
 .zitat-container {
@@ -190,6 +192,7 @@
     justify-content: space-evenly;
     text-align: center;
     align-items: center;
+    margin-bottom: 3rem;
 }
 
 .autogramm-text {
@@ -259,19 +262,12 @@
     align-items: center;
     margin-bottom: 10rem;
     height: auto;
+    padding: 2.5rem;
 }
 
 .ueberschrift {
     padding-left: 3rem;
     padding-right: 3rem;
-    text-align: center;
-    height: auto;
-}
-
-.ortsname,
-.weblinks-titel {
-    padding: 1.25rem;
-    line-height: 2.5rem;
     text-align: center;
     height: auto;
 }
@@ -282,6 +278,15 @@
     justify-content: space-evenly;
     align-items: flex-start;
     height: auto;
+    padding: 2.5rem;
+}
+
+.ortsname,
+.weblinks-titel {
+    padding: 1.25rem;
+    line-height: 2.5rem;
+    text-align: center;
+    height: auto;
 }
 
 .links-container {
@@ -289,10 +294,11 @@
     flex-direction: column;
     justify-content: flex-start;
     height: auto;
+    margin-top: 1.75rem;
 }
 
 .weblink {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .footer-container {
