--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,34 @@
     text-align: justify;
 }
 
+.zitat {
+    background-color: lightgrey;
+    border: 0.2rem solid var(--bg-color);
+    border-radius: 1.2rem 0.3rem 1.2rem 0.3rem;
+    padding: 2.5rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
 .autogramm-image {
     border: 0.2rem solid var(--bg-color);
     border-radius: 1rem 0.1rem 1rem 0.1rem;
+}
+
+.geburtsort-container,
+.weblinks-container {
+    background-color: grey;
+    border: 0.2rem solid var(--bg-color);
+    border-radius: 1.2rem 0.3rem 1.2rem 0.3rem;
+}
+
+.geburtsort-text,
+.weblinks-text {
+    line-height: 2rem;
+}
+
+.weblink {
+    font-weight: bold;
 }
 
 .footer-container {
