--- a/css/structure.css
+++ b/css/structure.css
@@ -1,3 +1,7 @@
+body {
+    width: auto;
+}
+
 .master-container {
     display: flex;
     flex-direction: column;
@@ -5,7 +9,7 @@
     align-items: center;
     height: auto;
     box-sizing: border-box;
-    padding: 1%;
+    padding: 1rem;
 }
 
 .header-bar {
@@ -52,21 +56,26 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-right: 1%;
-    line-height: 400%;
-    height: auto;
-    width: 25%;
-    text-align: center;
+    margin-right: 0.5rem;
+    height: 4rem;
+    width: fit-content;
+    padding-right: 1rem;
+    align-items: center;
 }
 
-.spotify-icon,
-.wikipedia-icon,
-.music-note {
+.icons {
     max-width: 2rem;
     max-height: 2rem;
     width: auto;
     height: auto;
     margin: 1.15rem;
+}
+
+.button-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .geborenam-page {
@@ -107,7 +116,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    margin: 0.3125rem;
     width: 55%;
     height: auto;
 }
@@ -115,9 +123,13 @@
 .steckbrief-container,
 .lebenslauf-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
+    width: auto;
+    height: auto;
+    margin-bottom: 5rem;
     padding-top: 1.5rem;
+    padding-bottom: 0.5rem;
 }
 
 .subject-container,
@@ -166,26 +178,23 @@
     height: auto;
 }
 
-.lebenslauf-container {
+.line {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    width: auto;
-    height: auto;
-    margin-bottom: 5rem;
-}
-
-.event-container,
-.year-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    width: auto;
+    margin-bottom: 1rem;
 }
 
 .year,
-.event {
-    margin-bottom: 1.5rem;
+.subjects {
+    width: 50%;
+    margin-right: 1rem;
+    text-align: center;
+}
+
+.event,
+.information {
+    padding-right: 1rem;
 }
 
 .autogramm-container {
@@ -212,6 +221,10 @@
     justify-content: space-evenly;
     text-align: center;
     align-items: center;
+}
+
+.trivia-titel {
+    width: auto;
 }
 
 .trivia-text {
@@ -251,8 +264,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin: 0.3125rem;
-    margin-left: 0;
+    margin-right: 2rem;
     width: 30%;
     height: auto;
 }
@@ -312,4 +324,8 @@
     line-height: 5rem;
     padding: 1rem;
     margin-top: 0.625rem;
+}
+
+.footer-contents {
+    margin-bottom: 0.5rem;
 }
