--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,20 @@
 .logo-text {
     font-size: 150%;
     font-weight: bolder;
-    letter-spacing: 50px;
+    letter-spacing: 3.125rem;
 }
 
 .link-buttons {
-    font-weight: bold;
-    letter-spacing: 0.2rem;
-    color: var(--text-color-bright);
     background-color: var(--bg-color);
     border: 0.2rem solid grey;
     border-radius: 1rem 0.1rem 1rem 0.1rem;
     overflow: hidden;
+}
+
+.button-text {
+    font-weight: bold;
+    letter-spacing: 0.2rem;
+    color: var(--text-color-bright);
 }
 
 .spotify-icon,
