little bug fix for box-sizing

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -69,7 +69,7 @@
 
     .geburtsort-container,
     .weblinks-container {
-        box-sizing: padding-box;
+        box-sizing: border-box;
         margin-bottom: 3rem;
         width: auto;
     }
